# FastBitset

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  coverage.yml  unit-tests.yml
benchmarks/: CMakeLists.txt  benchmark_fastbitset.cpp
src/include/fastbitset/: fastbitset.hpp
tests/: CMakeLists.txt  test_fastbitset.cpp  test_fastbitset_08u08.cpp  test_fastbitset_08u16.cpp  test_fastbitset_16u08.cpp
